fix background bug on IOS mobiles

--- a/css/style.default.css
+++ b/css/style.default.css
@@ -2382,13 +2382,17 @@ code {
 .about-section .col-lg-6 {
     margin-top: 115px;
   }
-}
 
-@media (min-width: 992px){
-.customers-section .col-lg-6 {
+  .customers-section .col-lg-6 {
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
     max-width: 90%;
     margin-bottom: 5px;
   } 
+}
+
+@media (max-width:640px) {
+  section {
+    background-attachment:initial;
+  }
 }
